Final update before submission

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="raleway-font">Explore the live preview and imagine your brand in this bold new look.</p>
         <button class="button-style raleway-font primary-bg">Launch Live Preview</button>
       </div>
-      <img class="action-img-content" src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
+      <img class="action-img-content" src="Imges/Assets/wc-mini.png" alt="">
     </section>
 
     <section id="user-section" class="container">
@@ -63,10 +63,10 @@
           </ul>
           <div class="feedback-text-content">
             <h3 class="raleway-font">Loved by Designers</h3>
-            <p class="inter-font">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <p class="inter-font">This template instantly leveled up our presence. - Studio Vertex</p>
           </div>
           <div class="feedback-profile">
-            <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+            <img src="Imges/Assets/avatar.png" alt="">
             <div>
               <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
               <p class="inter-font">Date: 11/07/2025</p>
@@ -83,10 +83,10 @@
           </ul>
           <div class="feedback-text-content">
             <h3 class="raleway-font">Loved by Designers</h3>
-            <p class="inter-font">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
           </div>
           <div class="feedback-profile">
-            <img src="B12A01-landing-launchpad/Assets/profile-pic (1)_enhanced.png"">
+            <img src="Imges/Assets/profile-pic (1)_enhanced.png"">
             <div>
               <h4 class=" inter-font">Md. Abu Jahid Hasan</h4>
             <p class="inter-font">Date: 11/07/2025</p>
@@ -103,10 +103,10 @@
         </ul>
         <div class="feedback-text-content">
           <h3 class="raleway-font">Loved by Designers</h3>
-          <p class="inter-font">This template instantly leveled up our presence.” – Studio Vertex</p>
+          <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
         </div>
         <div class="feedback-profile">
-          <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+          <img src="Imges/Assets/avatar.png" alt="">
           <div>
             <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
             <p class="inter-font">Date: 11/07/2025</p>
@@ -123,7 +123,7 @@
         <button class="button-style raleway-font primary-bg">Ger Started Free</button>
       </div>
       <div class="better-img">
-        <img src="B12A01-landing-launchpad/Assets/wc-big.png" alt="">
+        <img src="Imges/Assets/wc-big.png" alt="">
       </div>
     </section>
 
