--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="raleway-font">Explore the live preview and imagine your brand in this bold new look.</p>
         <button class="button-style raleway-font primary-bg">Launch Live Preview</button>
       </div>
-      <img class="action-img-content" src="Imges/Assets/wc-mini.png" alt="">
+      <img class="action-img-content" src="imges/Assets/wc-mini.png" alt="">
     </section>
 
     <section id="user-section" class="container">
@@ -66,7 +66,7 @@
             <p class="inter-font">This template instantly leveled up our presence. - Studio Vertex</p>
           </div>
           <div class="feedback-profile">
-            <img src="Imges/Assets/avatar.png" alt="">
+            <img src="imges/Assets/avatar.png" alt="">
             <div>
               <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
               <p class="inter-font">Date: 11/07/2025</p>
@@ -86,7 +86,7 @@
             <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
           </div>
           <div class="feedback-profile">
-            <img src="Imges/Assets/profile-pic (1)_enhanced.png"">
+            <img src="imges/Assets/profile-pic (1)_enhanced.png"">
             <div>
               <h4 class=" inter-font">Md. Abu Jahid Hasan</h4>
             <p class="inter-font">Date: 11/07/2025</p>
@@ -106,7 +106,7 @@
           <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
         </div>
         <div class="feedback-profile">
-          <img src="Imges/Assets/avatar.png" alt="">
+          <img src="imges/Assets/avatar.png" alt="">
           <div>
             <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
             <p class="inter-font">Date: 11/07/2025</p>
@@ -123,7 +123,7 @@
         <button class="button-style raleway-font primary-bg">Ger Started Free</button>
       </div>
       <div class="better-img">
-        <img src="Imges/Assets/wc-big.png" alt="">
+        <img src="imges/Assets/wc-big.png" alt="">
       </div>
     </section>
 
