Final update before submission

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="Styles/style.css">
+  <link rel="stylesheet" href="./Styles/style.css">
 
 </head>
 
@@ -29,7 +29,7 @@
         <p class="raleway-font">Explore the live preview and imagine your brand in this bold new look.</p>
         <button class="button-style raleway-font primary-bg">Launch Live Preview</button>
       </div>
-      <img class="action-img-content" src="imges/Assets/wc-mini.png" alt="">
+      <img class="action-img-content" src="./image/Assets/wc-mini.png" alt="">
     </section>
 
     <section id="user-section" class="container">
@@ -66,7 +66,7 @@
             <p class="inter-font">This template instantly leveled up our presence. - Studio Vertex</p>
           </div>
           <div class="feedback-profile">
-            <img src="imges/Assets/avatar.png" alt="">
+            <img src="./image/Assets/avatar.png" alt="">
             <div>
               <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
               <p class="inter-font">Date: 11/07/2025</p>
@@ -86,33 +86,33 @@
             <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
           </div>
           <div class="feedback-profile">
-            <img src="imges/Assets/profile-pic (1)_enhanced.png"">
+            <img src="./image/Assets/profile-pic (1)_enhanced.png">
             <div>
               <h4 class=" inter-font">Md. Abu Jahid Hasan</h4>
-            <p class="inter-font">Date: 11/07/2025</p>
+              <p class="inter-font">Date: 11/07/2025</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="feedback-card">
-        <ul>
-          <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
-          <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
-          <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
-          <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
-          <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
-        </ul>
-        <div class="feedback-text-content">
-          <h3 class="raleway-font">Loved by Designers</h3>
-          <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
-        </div>
-        <div class="feedback-profile">
-          <img src="imges/Assets/avatar.png" alt="">
-          <div>
-            <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
-            <p class="inter-font">Date: 11/07/2025</p>
+        <div class="feedback-card">
+          <ul>
+            <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
+            <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
+            <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
+            <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
+            <li><a href="#"><i class='bx  bxs-star' style='color:#FFB805'></i></a></li>
+          </ul>
+          <div class="feedback-text-content">
+            <h3 class="raleway-font">Loved by Designers</h3>
+            <p class="inter-font">This template instantly leveled up our presence. – Studio Vertex</p>
+          </div>
+          <div class="feedback-profile">
+            <img src="./image/Assets/avatar.png" alt="">
+            <div>
+              <h4 class="inter-font">Mst. Najnin Nahar Naj</h4>
+              <p class="inter-font">Date: 11/07/2025</p>
+            </div>
           </div>
         </div>
-      </div>
       </div>
     </section>
 
@@ -123,7 +123,7 @@
         <button class="button-style raleway-font primary-bg">Ger Started Free</button>
       </div>
       <div class="better-img">
-        <img src="imges/Assets/wc-big.png" alt="">
+        <img src="./image/Assets/wc-big.png" alt="">
       </div>
     </section>
 
